/* 
  Localizable.strings
  Concrete

  Created by Vinicius Brito on 21/04/19.
  Copyright © 2019 Vinicius Brito. All rights reserved.
*/

//Urls
"urlListMovies" = "https://api.themoviedb.org/3/movie/popular?api_key=ce366837ba5968caa2ede95e28c38fcd&language=en-US&page=";
"urlListGenres" = "https://api.themoviedb.org/3/genre/movie/list?api_key=ce366837ba5968caa2ede95e28c38fcd&language=en-US";

//Alerts
"alertTitle" = "Message";
"alertOk" = "OK";
"alertError" = "An error has occurred, please try again later.";
"alertErrorInternet" = "No connection. Please reconnect and try again.";

//MainCoordinator
"mainCoordinatorTabMovies" = "Movies";
"mainCoordinatorTabFavorites" = "Favorites";

//MoviesViewController
"moviesViewControllerSearchTitle" = "Search movies";
"moviesViewControllerSearchEmpty" = "Your search returned no data.";
"moviesViewControllerReload" = "Please reconect and reload.";
"moviesViewControllerGenericEmpty" = "Nothing to show 🙁";
"moviesViewControllerLoading" = "Loading...";

//BookmarksViewController
"bookmarksViewControllerEmpty" = "Your favorites is empty. 😕";
