...
    </dependencies>
    <scenes>
        <!--Movies-->
        <scene sceneID="sCs-Yb-Rh2">
            <objects>
                <navigationController id="jgF-r2-JoH" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Movies" image="list_icon" id="P7B-pq-mGm"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="pI0-E7-VyR">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.96078431369999995" green="0.80784313730000001" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <textAttributes key="titleTextAttributes">
                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
...
            <point key="canvasLocation" x="-572" y="414"/>
        </scene>
        <!--Favorites-->
        <scene sceneID="MG0-Ei-YSR">
            <objects>
                <navigationController id="JOI-E8-hss" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Favorites" image="favorite_empty_icon" id="q3n-HV-CgF"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="IOv-e3-xyp">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.96078431369999995" green="0.80784313730000001" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <textAttributes key="titleTextAttributes">
                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
...
                                </connections>
                            </tableView>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U5l-zw-ZA0">
                                <rect key="frame" x="0.0" y="56" width="375" height="0.0"/>
                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                <state key="normal" title="Remove filters">
                                    <color key="titleColor" red="0.98061245679999998" green="0.83647745849999999" blue="0.23171196629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="tappedRemoveFilters:" destination="ly5-gU-ZUb" eventType="touchUpInside" id="Zw3-zs-fqX"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="20" y="496" width="335" height="38"/>
                                <color key="backgroundColor" red="0.98061245679999998" green="0.83647745849999999" blue="0.23171196629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="38" id="3N4-9B-0eb"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                <state key="normal" title="Apply">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
...
