...

class FilterViewController: UIViewController {
    
    let genreCollection: GenreCollection
    var filter: [(key: String, value: String)] = [("Date", ""), ("Genre", "")]
    
    let dateOptions = ["2015", "2016", "2017", "2018", "2019", "2020"]
    var isChoosingDate = true
    
    weak var delegate: FilterViewControllerDelegate?
    
    lazy var tableView: UITableView = {
        let tableView = UITableView()
...
